# Modulo-67

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py  urls.py
products/: models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0002_category_order_product_delete_produto_order_product.py  0003_category_active_category_description_category_slug_and_more.py
