[tool.poetry]
name = "modulo-67"
version = "0.1.0"
description = ""
authors = ["Kaio Grativol Baldo <78832356+KaioGBaldo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-debug-toolbar = "^6.2.0"
django = "^6.0.3"
djangorestframework = "^3.17.1"
django-filter = "^25.2"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
